--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <title>Git</title>
 </head>
 <body>
+  <div class="box">
+    <div class="container">
+      <div class="box__inner"></div>
+    </div>
+  </div>
   
 </body>
 </html>
