--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, 2024  
   </p>
   <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, voluptatem. Omnis commodi, quibusdam quae voluptates tempore magnam obcaecati maiores reprehenderit!</h1>
+  <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam quae ullam quia magni optio natus reprehenderit, illum praesentium aut numquam, perspiciatis culpa, voluptates debitis amet vero eaque incidunt?</h2>
 </body>
 </html>
