--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, 2024  
   </p>
   <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, voluptatem. Omnis commodi, quibusdam quae voluptates tempore magnam obcaecati maiores reprehenderit!</h1>
+  <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, nisi!</h3>
 </body>
 </html>
